flaskApp/static/css/style.css
* {
    box-sizing: border-box;
}

body{
    margin: 0;
    min-width: 1624px;
}

header{
    height: 150px;
    background-color: #4169B9;
}

header a{
    text-decoration: none;
    color: white;
}

a {
    color: white;
    text-decoration: none;
}

a:hover{
    color: white;
    text-decoration: underline;
}

#titleClock{
    float: left;
    width: 95%;
    height: 145px;
}

#title{
    text-align: center;
    padding: 0px 0px 10px 50px;
    color: white;
}

#sm-icons{
    padding: 0px 4px;
    text-align: right;
    float: right;
    height: 145px;
    width: 5%;
    max-width: 50px;
}

#sm-icons a{
    width: 25px;
    height: 25px;
    font-size: 20px;
    text-decoration: none;
    color: white;
    padding: 2px;
    margin: 4px;
}

#date-time{
    padding: 10px 20px 0px 20px;
    font-family: 'Open Sans', sans-serif;
    color: white;
}


main{
    display: table;
    margin-left: auto;
    margin-right: auto;
    padding: 10px 0px;
    color: #2f2f2f
}

#selections{
        display: table;
        width: 1040px;
}

#stationSelect{
        display: table;
        width: 40%;
}

#stationSelect div{
        float: left;
        margin-right: 10px;
}

#stationSelect, #radioButtons{
        float: left;
}

.button {
    font-family: 'Open Sans', sans-serif;
}

#radioButtons{
    display: table;
    width: 60%;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    font-size: 14px;
    float: left;
}

#radioButtons div{
    float: left;
    padding: 2px;
}


#currentWeather{
    display: table;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    width: 1040px;
}

#sunrise ,#sunset, #temperature, #tempFeeling,
#wind,#humidity{
    display: table;
    width: 14%;
    float: left;
    padding: 5px 10px;
}

#weather{
    display: table;
    width: 16%;
    padding: 5px 10px;
}

#weather img{
    margin-left: 30px;
    width: 40px;
}

#sunrise img,
#sunset img,
#temperature img,
#tempFeeling img,
#wind img,
#humidity img {
    width: 30px;
    padding: 4px;
}

#sunrise div,
#sunset div,
#temperature div,
#tempFeeling div,
#wind div,
#humidity div {
    display: table;
    padding: 4px;
}

#sunrise img, #sunrise div,
#sunset img, #sunset div,
#temperature img, #temperature div,
#temperature2 img, #temperature2 div,
#tempFeeling img, #tempFeeling div,
#wind img, #wind  div,
#humidity img, #humidity div {
        float: left;
}


#map {
    height: 450px;
    width: 1040px;
    margin: 5px 0px;
    float: left;
}

/* Styling for ML prediction section */

.prediction {
    margin: 0px auto;
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    background-color: #4169B9;
    color: white;
    clear: both;
}

#predictHeader {
    font-size: 18px;
    padding-top: 20px;
    padding-bottom: 10px;
}

#predictionOutput {
    padding-bottom: 20px;
    font-size: 18px;
}

footer #disclaimer {
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    font-size: 12px;
    font-family: 'Open Sans', sans-serif;
    font-weight: lighter;
    padding: 15px 0px;
    text-align: center;
    width: 100%;
}

footer p:first-child {
    font-weight: bold;
    font-size: 14px;
}

footer #disclaimer {
    background-color: #2f2f2f;

}

#graphs {
    height: 460px;
    display: none;
    float: left;
}

#maindiv{
    float: left;
}

/* Styling for the graphs */

#dashboard_div {
    /*margin-top: 15px;*/
}

#weeklyStation {
    margin-bottom: 15px;
}

#control_div {
    width: 354px;
    margin: 0 auto;
}

#chart_div {
    margin-bottom: 10px;
}


.google-visualization-controls-categoryfilter {
    font-family: 'Open Sans', sans-serif;
    width: 100%;
    color: #2f2f2f;
}

.google-visualization-controls-categoryfilter .goog-combobox input {
    font-family: 'Open Sans', sans-serif;
    font-size: 12px;
    color: #2f2f2f;
    width: 75%;
}

#slider_div {
    width:72%;
    display: inline-block;
    text-align: right;
}

#filter_div {
    width: 28%;
    display: inline-block;
    float:left;
}

.google-visualization-controls-rangefilter {
    font-family: 'Open Sans', sans-serif;
    color: #2f2f2f;
    width: 100%;
}

.google-visualization-controls-rangefilter .google-visualization-controls-label {
    font-size: 12px;
    display: inline-block;
    vertical-align: inherit;
}

.google-visualization-controls-rangefilter .google-visualization-controls-slider-thumb {
    background-color: #4169B9;
}

.google-visualization-controls-rangefilter .google-visualization-controls-rangefilter-thumblabel{
    color: #2f2f2f;
    font-size: 12px;
}

#infowindow a {
    color: black;
    font-weight: bold;
}

#infowindow {
    width: 250px;
}

.Infotitle {
    margin: 0px;
    font-weight: bold;
    width: 35%;
    float: left;
}

.Infovalue {
    margin: 0px;
    width: 65%;
    float: left;
    text-align: left;
    padding: 0px 15px;
}

#route{
    margin-top: 10px;
}


#route a {
    color:blue;
}

#route a:hover {
     color:DeepSkyBlue;
}

#bike-button {
    background-color: #fff;
    border: 2px solid #fff;
    border-radius: 3px;
    box-shadow: 0 2px 6px rgbA(0,0,0,0.3);
    cursor: pointer;
    margin-top: 10px;
    margin-bottom: 22px;
    margin-left: 15px;
    text-align: center;
}

#bike-button:hover {
    background-color: #EBEBEB;
    border: 2px solid #EBEBEB;
}

#bike-text {
    color: rgb(25,25,25);
    font-family: Roboto,Arial,sans-serif;
    font-size: 16px;
    line-height: 36px;
    padding-left: 5px;
    padding-right: 5px;
}

